--- a/src/main/resources/static/css/calendar.css
+++ b/src/main/resources/static/css/calendar.css
@@ -8,9 +8,18 @@
 .xcalend tbody td:hover, .xcalend td:hover{background:#025;color:#acf}
 .xcalend tbody td:nth-child(n+6){color:#e78c5c}
 .xcalend .cal-first td:nth-last-child(-n+2){color:#e78c5c}
-.xcalend tbody td.today{background:#d00;color:#fff;font-weight:bold}
+/*.xcalend tbody td.today{background:#d00;color:#fff;font-weight:bold}*/
+.xcalend tbody td.today{background: #847cf5;color:#fff;font-weight:bold}
 .xcalend tbody td.bold{font-weight:bold}
 .xcalend tbody td.cal-l b, .xcalend tbody td.cal-r b{display:none}
 .xcalend tbody td.cal-l:hover b, .xcalend tbody td.cal-r:hover b{display:inline}
 .xcalend a{text-decoration:none}
 .xcalend th a{color:#ccc;display:block;padding:5px 0}
+
+.xcalend {
+    font-family: 'Jost', 'sans-serif';
+    border-width: 1px;
+    border-color: #7a7a7a;
+    padding: 4px;
+    /*box-shadow: 5px 5px 10px black;*/
+}
