--- a/src/main/resources/templates/admin/index2.html
+++ b/src/main/resources/templates/admin/index2.html
@@ -17,8 +17,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300&display=swap" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/css2?family=Viaoda+Libre&display=swap" rel="stylesheet">
-<!--    <script defer th:src="@{/scripts/admin/main.js}"></script>-->
     <script defer th:src="@{/scripts/admin/item-menu.js}"></script>
+    <script defer th:src="@{/scripts/admin/time-edit-menu.js}"></script>
     <script defer th:src="@{/scripts/admin/admin2.js}"></script>
 </head>
 <body>
@@ -80,7 +80,7 @@
                         <th>Дата</th>
                         <th>Время</th>
                         <th>Описание</th>
-                        <th>Статус</th>
+<!--                        <th>Статус</th>-->
                     </tr>
                     </thead>
                     <tbody id="table-items"></tbody>
@@ -98,6 +98,24 @@
             <button id="cancel">Отмена</button>
             <button id="submit">Ок</button>
         </div>
+    </div>
+
+    <div class="time-edit-menu flex-column" id="time-edit-menu">
+<!--        <button id="cancel-time">X</button>-->
+        <div class="flex-column ">
+            <button class="more-btn align-self-end j-end" id="time-close-btn">
+                <img src="../../images/btns/close-32.png" alt="" class="close-img">
+            </button>
+        </div>
+
+        <div class="flex-row padding-top-10 padding-bottom-10">
+            <select id="hour-select"></select>
+            <span>:</span>
+            <select id="minutes-select" class=""></select>
+        </div>
+
+        <button id="time-submit-btn" class="confirm-btn">Сохранить</button>
+
     </div>
 
     <div class="creating-menu-background" id="dance-lists-add-menu-background">
