--- a/src/main/resources/templates/admin/index2.html
+++ b/src/main/resources/templates/admin/index2.html
@@ -13,6 +13,7 @@
     <link type="text/css" rel="stylesheet" th:href="@{/css/calendar.css}" />
 
     <script defer type="text/javascript" th:src="@{/scripts/admin/server-requests.js}"></script>
+    <script defer type="text/javascript" th:src="@{/scripts/utils/date-time-converter.js}"></script>
     <script defer type="text/javascript" th:src="@{/scripts/admin/menus.js}"></script>
     <script defer type="text/javascript" th:src="@{/scripts/admin/table.js}"></script>
     <script defer type="text/javascript" th:src="@{/scripts/admin/calendar.js}"></script>
