added dto, fixed update request

--- a/src/main/resources/templates/admin/index2.html
+++ b/src/main/resources/templates/admin/index2.html
@@ -15,6 +15,10 @@
     <script defer type="text/javascript" th:src="@{/scripts/admin/server-requests.js}"></script>
     <script defer type="text/javascript" th:src="@{/scripts/utils/date-time-converter.js}"></script>
     <script defer type="text/javascript" th:src="@{/scripts/admin/menus.js}"></script>
+
+    <script defer type="text/javascript" th:src="@{/scripts/dto/mapper.js}"></script>
+    <script defer type="text/javascript" th:src="@{/scripts/dto/dance-list-dto.js}"></script>
+
     <script defer type="text/javascript" th:src="@{/scripts/admin/table.js}"></script>
     <script defer type="text/javascript" th:src="@{/scripts/admin/calendar.js}"></script>
     <script defer type="text/javascript" th:src="@{/scripts/admin/new-row-menu.js}"></script>
