add code for dance data

--- a/src/main/resources/templates/admin/index2.html
+++ b/src/main/resources/templates/admin/index2.html
@@ -25,6 +25,7 @@
     <script defer type="text/javascript" th:src="@{/scripts/admin/time-edit-menu.js}"></script>
 <!--    <script defer type="text/javascript" th:src="@{/scripts/admin/admin2.js}"></script>-->
 
+    <script defer type="text/javascript" th:src="@{/scripts/model/dance/dance.js}"></script>
     <script defer type="text/javascript" th:src="@{/scripts/admin/Main.js}"></script>
 </head>
 <body>
@@ -70,7 +71,7 @@
                 </div>
             </div>
 
-            <div class="top-bar_table">
+            <div id="top-bar_table" class="top-bar_table">
                 <div class="top-bar">
                     <button class="new-item-btn" id="new-item-btn">Добавить</button>
                 </div>
