added tables classes hierarchy

--- a/src/main/resources/templates/admin/index2.html
+++ b/src/main/resources/templates/admin/index2.html
@@ -26,6 +26,7 @@
 <!--    <script defer type="text/javascript" th:src="@{/scripts/admin/admin2.js}"></script>-->
 
     <script defer type="text/javascript" th:src="@{/scripts/model/dance/dance.js}"></script>
+    <script defer type="text/javascript" th:src="@{/scripts/model/dance/dance-table-header.js}"></script>
     <script defer type="text/javascript" th:src="@{/scripts/admin/Main.js}"></script>
 </head>
 <body>
