--- a/src/main/resources/templates/admin/index2.html
+++ b/src/main/resources/templates/admin/index2.html
@@ -19,14 +19,14 @@
     <script defer type="text/javascript" th:src="@{/scripts/dto/mapper.js}"></script>
     <script defer type="text/javascript" th:src="@{/scripts/dto/dance-list-dto.js}"></script>
 
-    <script defer type="text/javascript" th:src="@{/scripts/admin/table.js}"></script>
     <script defer type="text/javascript" th:src="@{/scripts/admin/calendar.js}"></script>
     <script defer type="text/javascript" th:src="@{/scripts/admin/new-row-menu.js}"></script>
     <script defer type="text/javascript" th:src="@{/scripts/admin/time-edit-menu.js}"></script>
 <!--    <script defer type="text/javascript" th:src="@{/scripts/admin/admin2.js}"></script>-->
 
     <script defer type="text/javascript" th:src="@{/scripts/model/dance/dance.js}"></script>
-    <script defer type="text/javascript" th:src="@{/scripts/model/dance/dance-table-header.js}"></script>
+    <script defer type="text/javascript" th:src="@{/scripts/model/dance-table-header.js}"></script>
+    <script defer type="text/javascript" th:src="@{/scripts/model/table.js}"></script>
     <script defer type="text/javascript" th:src="@{/scripts/admin/Main.js}"></script>
 </head>
 <body>
@@ -76,23 +76,23 @@
                 <div class="top-bar">
                     <button class="new-item-btn" id="new-item-btn">Добавить</button>
                 </div>
-                <table id="table" class="table">
-                    <thead>
-                    <tr class="rows">
+<!--                <table id="table" class="table">-->
+<!--                    <thead>-->
+<!--                    <tr class="table-row">-->
 
-                        <th>
-                            <input type="checkbox">
-                            <span>Название</span>
+<!--                        <th>-->
+<!--                            <input type="checkbox">-->
+<!--                            <span>Название</span>-->
 
-                        </th>
-                        <th>Дата</th>
-                        <th>Время</th>
-                        <th>Описание</th>
-<!--                        <th>Статус</th>-->
-                    </tr>
-                    </thead>
-                    <tbody id="table-items"></tbody>
-                </table>
+<!--                        </th>-->
+<!--                        <th>Дата</th>-->
+<!--                        <th>Время</th>-->
+<!--                        <th>Описание</th>-->
+<!--&lt;!&ndash;                        <th>Статус</th>&ndash;&gt;-->
+<!--                    </tr>-->
+<!--                    </thead>-->
+<!--                    <tbody id="table-items"></tbody>-->
+<!--                </table>-->
             </div>
 
         </div>
