super massive changes, switch to MVP pattern with Observer pattern

--- a/src/main/resources/templates/admin/index2.html
+++ b/src/main/resources/templates/admin/index2.html
@@ -30,7 +30,7 @@
 <!--    <script defer type="text/javascript" th:src="@{/scripts/model/table.js}"></script>-->
 <!--    <script defer type="text/javascript" th:src="@{/scripts/admin/Main.js}"></script>-->
 
-        <script defer type="text/javascript" th:src="@{/scripts/typescript/view.js}"></script>
+        <script defer type="module" th:src="@{/scripts/typescript/view.js}"></script>
 
 </head>
 <body>
