--- a/src/main/resources/templates/admin/index2.html
+++ b/src/main/resources/templates/admin/index2.html
@@ -79,13 +79,20 @@
             <div id="top-bar_table" class="top-bar_table">
                 <div class="top-bar">
                     <button class="new-item-btn" id="new-item-btn">Добавить</button>
-                </div>
-                <div class="top-bar">
                     <button class="new-item-btn" id="delete-btn">Удалить</button>
                 </div>
                 <div id="table-container">
 
                 </div>
+                <div class="flex-row gap-5">
+                    <div id="list-container">
+
+                    </div>
+                    <div id="list-info-container" class="list-info-container">
+
+                    </div>
+                </div>
+
 <!--                <table id="table" class="table">-->
 <!--                    <thead>-->
 <!--                    <tr class="table-row">-->
