some html & css changes

--- a/src/main/resources/static/css/admin-page2.css
+++ b/src/main/resources/static/css/admin-page2.css
@@ -503,3 +503,15 @@
     top:0;
     left:0;
 }
+
+.calendar {
+    padding: 2px 4px 2px 10px;
+    font-size: 14px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #b1b9b7;
+}
+
+.textarea {
+
+}
