--- a/src/main/resources/static/css/admin-page2.css
+++ b/src/main/resources/static/css/admin-page2.css
@@ -111,7 +111,7 @@
     /*border-right: none;*/
     user-select: none;
     color: #646464;
-    font-weight: 600;
+    font-weight: 500;
     min-width: 120px;
 }
 
@@ -142,7 +142,7 @@
 /* Checked */
 .left-menu__radio-group input[type=radio]:checked + label {
     /*background: #dadada;*/
-    font-weight: bold;
+    /*font-weight: bold;*/
     /*text-decoration: underline;*/
     /*text-underline-position: under;*/
     color: black;
@@ -171,21 +171,22 @@
     gap: 4px;
     flex-direction: column;
 }
-.list-item {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    /*cursor: pointer;*/
-    padding: 0 15px;
-    line-height: 44px;
 
-    font-family: 'Jost', 'sans-serif';
-    font-size: 14px;
-    border: 1px solid #999;
-    /*border-right: none;*/
-    user-select: none;
-    width: 500px;
-}
+/*.list-item {*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*    justify-content: space-between;*/
+/*    !*cursor: pointer;*!*/
+/*    padding: 0 15px;*/
+/*    line-height: 44px;*/
+
+/*    font-family: 'Jost', 'sans-serif';*/
+/*    font-size: 14px;*/
+/*    border: 1px solid #999;*/
+/*    !*border-right: none;*!*/
+/*    user-select: none;*/
+/*    width: 500px;*/
+/*}*/
 
 .new-item-btn {
     background: #9094ef;
@@ -282,7 +283,10 @@
     font-weight: bold;
 }
 .bold {
-    font-weight: bold;
+    font-weight: 500;
+}
+.medium {
+    font-weight: normal;
 }
 
 .jost {
@@ -290,7 +294,6 @@
 }
 .font-size-18 {
     font-size: 18px;
-    font-weight: bold;
 }
 .font-size-14 {
     font-size: 14px;
@@ -298,19 +301,24 @@
 }
 .font-size-16 {
     font-size: 16px;
-    font-weight: bold;
 }
 .font-size-12 {
     font-size: 12px;
-    font-weight: lighter;
+    font-weight: 300;
 }
 .ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
 }
+
 .li:not(:last-child) {
     margin-bottom: 4px;
+}
+.list-item-select {
+    background-color: #efefef;
+    background-color: #f5f5f5;
+    font-weight: 500;
 }
 .gap-10 {
     gap: 10px;
@@ -318,7 +326,7 @@
 .gap-5 {
     gap: 5px;
 }
-.list-item-div {
+.list-item {
     padding: 14px 30px;
     border-style: solid;
     border-width: 1px;
@@ -513,5 +521,87 @@
 }
 
 .textarea {
+
+}
+
+.space-between {
+    justify-content: space-between;
+}
+
+.btn-small {
+
+}
+.btn-icon {
+    background: transparent;
+    border-style: hidden;
+    opacity: 50%;
+}
+.btn-icon:hover {
+    cursor: pointer;
+    opacity: 80%;
+}
+
+.dance-list-dances {
+    /*background: #f5f5f4;*/
+    background: #f6f6f6;
+    padding: 6px 5px 5px 12px;
+    border-style: solid;
+    border-width: 1px;
+    /*border-width: 0px 0px 1px 0px;*/
+    border-color: #e3e3e3;
+}
+
+.new-dance-for-dance-list-btn {
+    /*background: #9094ef;*/
+    /*background: transparent;*/
+    /*border-radius: 20px;*/
+    /*background: #f1f1ff;*/
+    background: #ffffff;
+    border-color: #a1b9ff;
+    border-style: dashed;
+    border-width: 1px;
+    height: 34px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    font-family: 'Jost', 'sans-serif';
+    font-size: 14px;
+    /* font-weight: bolder; */
+    padding: 4px 15px;
+    line-height: 34px;
+    color: #093cd1;
+    /*background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' stroke='%23093CD1FF' stroke-width='1' stroke-dasharray='5%2c 8' stroke-dashoffset='0' stroke-linecap='square'/%3e%3c/svg%3e");*/
+}
+
+.new-dance-for-dance-list-btn:hover {
+    background-color: #9a9a9a;
+}
+
+.dances-from-dance-list-div {
+    background: #f3f3f3;
+    padding: 5px;
+}
+
+.save-changes-btn {
+    border-color: #c5c5c5;
+    border-style: solid;
+    border-width: thin;
+    border-color: #aec9f3;
+    background-color: aliceblue;
+    color: #093cd1;
+}
+.save-changes-btn:hover {
+    /*background-color: #e3e3e3;*/
+    background-color: #cfe1fc;
+}
+
+.button {
+    font-family: 'Jost', 'sans-serif';
+    font-size: 14px;
+    padding: 4px 15px;
+    line-height: 34px;
+}
+.hr {
 
 }
