--- a/src/main/resources/templates/admin/index2.html
+++ b/src/main/resources/templates/admin/index2.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inria+Sans:wght@300;400&family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Viaoda+Libre&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Rubik&family=Libre+Franklin&display=swap" rel="stylesheet">
 
     <link type="text/css" rel="stylesheet" th:href="@{/css/dance.css}">
     <link type="text/css" rel="stylesheet" th:href="@{/css/admin-page2.css}">
@@ -208,10 +208,17 @@
 <!--    <div class="creating-menu-background">-->
 <!--        -->
 <!--    </div>-->
-    <div id="dances-from-dance-list-menu" class="creating-menu">
-        <ul>
-            <li>el</li>
+    <div id="dances-from-dance-list-menu" class="creating-menu gap-10 jost">
+        <div class="flex-row space-between">
+            <span class="jost">Выбрать танцы</span>
+            <button class="btn-img">
+                <img src="../../images/btns/close-16.png">
+            </button>
+        </div>
+        <input type="search">
+        <ul class="flex-column gap-5">
         </ul>
+        <button class="button" id="dances-from-dance-list-menu-confirm-btn">Выбрать</button>
     </div>
 </body>
 </html>
