html & css changes

--- a/src/main/resources/templates/admin/index2.html
+++ b/src/main/resources/templates/admin/index2.html
@@ -90,8 +90,9 @@
                 <div class="flex-row gap-5">
 
                     <div class="flex-column gap-5">
-                        <button class="new-dance-for-dance-list-btn" id="new-item-btn">
-                            <img src="../../images/btns/add-list-24.png">
+                        <button class="button new-dance-list-btn" id="new-item-btn">
+                            + Новая подборка
+<!--                            <img src="../../images/btns/add-list-24.png">-->
                         </button>
                         <div id="list-container">
 
