--- a/src/main/resources/static/css/admin-page2.css
+++ b/src/main/resources/static/css/admin-page2.css
@@ -304,7 +304,7 @@
 }
 .font-size-12 {
     font-size: 12px;
-    font-weight: 300;
+    /*font-weight: 600;*/
 }
 .ul {
     list-style-type: none;
@@ -314,6 +314,7 @@
 
 .li:not(:last-child) {
     margin-bottom: 4px;
+    border-bottom: 1px solid #cdcdcd;
 }
 .list-item-select {
     background-color: #efefef;
@@ -340,9 +341,8 @@
     padding: 14px 30px;
     border-style: solid;
     border-width: 1px;
-    /*border-color: #ebeaea;*/
-    border-color: #676767;
-    background: #efefef;
+    border-color: #ebeaea;
+    background: #ffffff;
 }
 
 .confirm-btn {
@@ -547,23 +547,22 @@
 }
 
 .dance-list-dances {
-    /*background: #f5f5f4;*/
-    /*background: #f6f6f6;*/
-    /*padding: 6px 5px 5px 12px;*/
-    padding: 9px 12px 12px 20px;
+
+    /*padding: 9px 12px 12px 20px;*/
+
     /*border-style: solid;*/
     /*border-width: 1px;*/
 
     border-color: #e3e3e3;
     font-variant: all-petite-caps;
-    border-bottom: 1px solid #7d7d7d;
+    /*border-bottom: 1px solid #cdcdcd;*/
+    padding: 2px 0px 0px 0px;
+    line-height: 15px;
 }
 
 .new-dance-for-dance-list-btn {
     background: #ffffff;
-    border-color: #a1b9ff;
-    border-style: dashed;
-    border-width: 1px;
+    border: 1px dashed #a1b9ff;
     height: 34px;
     display: flex;
     justify-content: center;
@@ -581,6 +580,10 @@
 }
 .new-dance-list-btn {
     width: 100%;
+    height: 81px;
+    background: #ffffff;
+    border: 1px dashed #a1b9ff;
+
 }
 
 .new-dance-for-dance-list-btn:hover {
@@ -646,5 +649,20 @@
 
 .dance-menu-div {
     background: white;
-    padding: 5px 15px 40px 15px;
+    padding: 0px 0px 20px 0px;
+    /*padding: 5px 15px 40px 15px;*/
 }
+
+.small-font {
+    font-size: 12px;
+    font-weight: 300;
+}
+.weight-600 {
+    font-weight: 600;
+}
+.weight-300 {
+    font-weight: 300;
+}
+.weight-400 {
+     font-weight: 500;
+ }
