--- a/src/main/resources/static/css/admin-page2.css
+++ b/src/main/resources/static/css/admin-page2.css
@@ -316,10 +316,13 @@
     margin-bottom: 4px;
     border-bottom: 1px solid #cdcdcd;
 }
-.list-item-select {
+.list-item-selected {
     background-color: #efefef;
     background-color: #f5f5f5;
     font-weight: 500;
+}
+.new-btn-selected {
+    background: aliceblue !important;
 }
 .gap-10 {
     gap: 10px;
