--- a/src/main/resources/templates/admin/index2.html
+++ b/src/main/resources/templates/admin/index2.html
@@ -158,7 +158,7 @@
 
     </div>
 
-    <div class="popup-menu-background" id="dance-lists-add-menu-background">
+    <div class="popup-menu-background hided" id="dance-lists-add-menu-background">
         <div class="creating-menu">
             <div class="top-bar">
                 <span class="bold-span">Новая подборка</span>
@@ -176,7 +176,7 @@
         </div>
     </div>
 
-    <div class="popup-menu-background" id="dances-add-menu-background">
+    <div class="popup-menu-background hided" id="dances-add-menu-background">
         <div class="creating-menu">
             <div class="top-bar">
                 <span class="bold-span">Новый танец</span>
@@ -193,7 +193,7 @@
         </div>
     </div>
 
-    <div class="popup-menu-background" id="dance-types-add-menu-background">
+    <div class="popup-menu-background hided" id="dance-types-add-menu-background">
         <div class="creating-menu">
             <div class="top-bar">
                 <span class="bold-span">Новый тип</span>
@@ -211,7 +211,7 @@
 <!--    <div class="creating-menu-background">-->
 <!--        -->
 <!--    </div>-->
-    <div id="dances-menu-back" class="popup-menu-background">
+    <div id="dances-menu-back" class="popup-menu-background hided">
         <div id="dances-from-dance-list-menu" class="creating-menu gap-10 jost">
             <div class="flex-row space-between">
                 <span class="jost">Выбрать танцы</span>
