--- a/src/main/resources/templates/admin/index2.html
+++ b/src/main/resources/templates/admin/index2.html
@@ -84,8 +84,8 @@
 <!--                        <img src="../../images/btns/add-list-24.png">-->
 <!--                    </button>-->
                 </div>
+                <div id="content-view"></div>
                 <div id="table-container">
-
                 </div>
                 <div class="flex-row gap-5">
 
@@ -98,33 +98,10 @@
 
                         </div>
                     </div>
-<!--                    <div class="flex-column gap-5">-->
                         <div id="list-info-container" class="list-info-container">
 
                         </div>
-<!--                        <button class="button save-changes-btn">-->
-<!--                            сохранить изменения-->
-<!--                        </button>-->
-<!--                    </div>-->
                 </div>
-
-<!--                <table id="table" class="table">-->
-<!--                    <thead>-->
-<!--                    <tr class="table-row">-->
-
-<!--                        <th>-->
-<!--                            <input type="checkbox">-->
-<!--                            <span>Название</span>-->
-
-<!--                        </th>-->
-<!--                        <th>Дата</th>-->
-<!--                        <th>Время</th>-->
-<!--                        <th>Описание</th>-->
-<!--&lt;!&ndash;                        <th>Статус</th>&ndash;&gt;-->
-<!--                    </tr>-->
-<!--                    </thead>-->
-<!--                    <tbody id="table-items"></tbody>-->
-<!--                </table>-->
             </div>
 
         </div>
