--- a/src/main/resources/templates/admin/index2.html
+++ b/src/main/resources/templates/admin/index2.html
@@ -87,21 +87,21 @@
                 <div id="content-view"></div>
                 <div id="table-container">
                 </div>
-                <div class="flex-row gap-5">
+<!--                <div class="flex-row gap-5">-->
 
-                    <div class="flex-column gap-5">
-                        <button class="button new-dance-list-btn" id="new-item-btn">
-                            + Новая подборка
-<!--                            <img src="../../images/btns/add-list-24.png">-->
-                        </button>
-                        <div id="list-container">
+<!--                    <div class="flex-column gap-5">-->
+<!--                        <button class="button new-dance-list-btn" id="new-item-btn">-->
+<!--                            + Новая подборка-->
+<!--&lt;!&ndash;                            <img src="../../images/btns/add-list-24.png">&ndash;&gt;-->
+<!--                        </button>-->
+<!--                        <div id="list-container">-->
 
-                        </div>
-                    </div>
-                        <div id="list-info-container" class="list-info-container">
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div id="list-info-container" class="list-info-container">-->
 
-                        </div>
-                </div>
+<!--                    </div>-->
+<!--                </div>-->
             </div>
 
         </div>
