--- a/src/main/resources/static/css/admin-page2.css
+++ b/src/main/resources/static/css/admin-page2.css
@@ -239,7 +239,7 @@
 .more-btn img {
     /*width: 100%;*/
     width: 18px;
-    transform: rotate(90deg);
+    /*transform: rotate(90deg);*/
 }
 
 
@@ -685,4 +685,45 @@
 
 *:focus {
     outline: none;
+}
+
+.round-btn {
+    border: 1px solid #3a3a3a;
+    padding: 16px;
+}
+
+.gap-20 {
+    gap: 20px;
+}
+
+.search {
+    border: 1px solid #3a3a3a;
+    border-radius: 30px;
+    padding: 0 8px 0 10px;
+    align-items: center;
+}
+.search input {
+    border: transparent;
+    border-radius: 30px;
+}
+.video-div {
+    aspect-ratio: 16/9;
+    width: 360px;
+    height: 203px;
+    border: 1px solid #000000;
+    /*border-radius: 14px;*/
+}
+.video {
+    /*aspect-ratio: 16/9;*/
+    /*width: 360px;*/
+    width: 100%;
+    height: 100%;
+    border-style: none;
+}
+
+.greed {
+    display: grid;
+    grid-column-gap: 20px;
+    grid-row-gap: 30px;
+    grid-template-columns: repeat(2, minmax(min-content, max-content));
 }
